feat: add HDFS support

--- a/env.sh.example
+++ b/env.sh.example
@@ -1,9 +1,13 @@
 #!/bin/bash
 
-export SPARK_MASTER=
+export SPARK_MASTER=""
 
 # true/false
-export USE_HDFS=
+export USE_HDFS=false
 
-# not needed if using HDFS
-export DATA_DIR=
+# not required if using HDFS
+export LOCAL_DATA_DIR=""
+
+# required if using HDFS
+export HDFS_DATA_DIR=""
+export HDFS_OUTPUT_DIR=""
